--- a/contato.html
+++ b/contato.html
@@ -57,16 +57,17 @@
 			<div class="contacts-wrapper">
 				<div class="contact">
 					<img src="images/Contato/Icones/cellphone.svg" alt="">
-					<div class="hide-content">
-						<h2 class="info-text__hide-content">Deseja ver nossos telefones para contato</h2>
-						<div class="btns">
-							<button class="yes-btn">Sim</button>
-							<button class="no-btn">Não</button>
-						</div>
-					</div>
+					<ul>
+						<li>(DDD)XXXXX-XXXX</li>
+						<li>(DDD)XXXXX-XXXX</li>
+					</ul>
 				</div>
 				<div class="contact">
 					<img src="images/Contato/Icones/mail.svg" alt="">
+					<ul>
+						<li>exemplodeemail@gmail.com</li>
+						<li>exemplodeemail@gmail.com</li>
+					</ul>
 				</div>
 			</div>
 		</div>
