--- a/index.html
+++ b/index.html
@@ -261,7 +261,49 @@
 								<li>Sistema de Controle</li>
 								<li>Diagnóstico de Falhas</li>
 							</ul>
-							<li>Motor Diesel</li>
+							<li>C. Motor Diesel</li>
+							<ul>
+								<li>Sistema Mecânico</li>
+								<li>Sistema Elétrico</li>
+								<li>Sistema de Lubrificação</li>
+								<li>Sistema de Arrefecimento</li>
+								<li>Sistema de Alimentação</li>
+							</ul>
+						</ul>
+					</div>
+				</div>
+
+				<div class="content" id="harvester-de-pneu-mt">
+					<div class="title-content"><h2>Harvester de Pneu (80 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a operar uma Harvester de Pneu de forma fácil aqui</p>
+
+						<ul>
+							<li>A. Máquina Base</li>
+							<ul>
+								<li>Apresentação dos Componentes</li>
+								<li>Sistema Rodante</li>
+								<li>Sistema Elétrico</li>
+								<li>Sistema Hidráulico</li>
+								<li>Ajustes da Grua</li>
+								<li>Sistema de Controle</li>
+								<li>Sistema de Supresssão de Incêndio</li>
+								<li>Diagnóstico de Falhas</li>
+							</ul>
+							<li>B. Cabeça Processadora</li>
+							<ul>
+								<li>Sistema de Alimentação</li>
+								<li>Sistema de Desgalhamento</li>
+								<li>Sistema Hidráulico</li>
+								<li>Sistema Elétrico</li>
+								<li>Sistema de Corte</li>
+								<li>Sistema de Lubrificação</li>
+								<li>Sistema de Medição</li>
+								<li>Sistema Estrutural</li>
+								<li>Sistema de Controle</li>
+								<li>Diagnóstico de Falhas</li>
+							</ul>
+							<li>C. Motor Diesel</li>
 							<ul>
 								<li>Sistema Mecânico</li>
 								<li>Sistema Elétrico</li>
@@ -279,16 +321,30 @@
 					<div class="text">
 						<p>Aprenda a operar uma Forwarder de forma fácil aqui</p>
 						<ul>
-							<li>Mecânica, Elétrica e Hidráulica Básica</li>
-							<li>Especialização em Mecanização Florestal</li>
-							<li>Máquina Base/Escavadeira PC200/ Cabeçote florestal 370E</li>
-							<li>Segurança na Operação</li>
-							<li>Procedimentos Administrativos</li>
-							<li>Procedimentos Operacionais</li>
-							<li>Tecnologias embarcadas</li>
-							<li>Sistema Hidráulica</li>
-							<li>Sistema Elétrico</li>
-							<li>Conhecimento Básico Cabeçote</li>
+							<li>A. Máquina Base</li>
+							<ul>
+								<li>Apresentação dos Componentes</li>
+								<li>Sistema Rodante</li>
+								<li>Sistema Elétrico</li>
+								<li>Sistema Hidráulico</li>
+								<li>Ajustes da Grua</li>
+								<li>Sistema de Controle</li>
+								<li>Sistema de Supresssão de Incêndio (se equipado)</li>
+								<li>Diagnóstico de Falhas</li>
+							</ul>
+							<li>B. Cabeça Processadora</li>
+							<ul>
+								<li>Sistema de Alimentação</li>
+								<li>Sistema de Desgalhamento</li>
+								<li>Sistema Hidráulico</li>
+								<li>Sistema Elétrico</li>
+								<li>Sistema de Corte</li>
+								<li>Sistema de Lubrificação</li>
+								<li>Sistema de Medição</li>
+								<li>Sistema Estrutural</li>
+								<li>Sistema de Controle</li>
+								<li>Diagnóstico de Falhas</li>
+							</ul>
 						</ul>
 					</div>
 				</div>
@@ -298,19 +354,52 @@
 					<div class="title-content"><h2>Retroescavadeira (24 Horas)</h2></div>
 					<div class="text">
 						<p>Aprenda a operar uma Retroescavadeira de forma fácil aqui</p>
+
 						<ul>
-							<li>Segurança</li>
-							<li>Termos técnicos</li>
-							<li>Adesivos</li>
-							<li>Instalação/Montagem</li>
-							<li>Instruções de Operação</li>
-							<li>Aplicações especiais</li>
-							<li>Transporte e Armazenagem</li>
-							<li>Hidráulica Básica</li>
+							<li>A. Máquina Base</li>
+							<ul>
+								<li>Apresentação dos Componentes</li>
+								<li>Sistema Rodante</li>
+								<li>Sistema Elétrico</li>
+								<li>Sistema Hidráulico</li>
+								<li>Ajustes da Grua</li>
+								<li>Sistema de Controle</li>
+								<li>Sistema de Supresssão de Incêndio</li>
+								<li>Diagnóstico de Falhas</li>
+							</ul>
+							<li>B. Cabeça Processadora</li>
+							<ul>
+								<li>Sistema de Alimentação</li>
+								<li>Sistema de Desgalhamento</li>
+								<li>Sistema Hidráulico</li>
+								<li>Sistema Elétrico</li>
+								<li>Sistema de Corte</li>
+								<li>Sistema de Lubrificação</li>
+								<li>Sistema de Medição</li>
+								<li>Sistema Estrutural</li>
+								<li>Sistema de Controle</li>
+								<li>Diagnóstico de Falhas</li>
+							</ul>
 						</ul>
 					</div>
 				</div>
 		
+				<!-- Informações sobre o Curso de: Retroescavadeira (Tipo uma section)-->
+				<div class="content" id="picador-de-madeira-mt">
+					<div class="title-content"><h2>Picador de Madeira (24 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda como consertar uma Picador de Madeira</p>
+					</div>
+				</div>
+		
+				<!-- Informações sobre o Curso de: Retroescavadeira (Tipo uma section)-->
+				<div class="content" id="picador-de-madeira-mt">
+					<div class="title-content"><h2>Sistema de Supressão de Incêndio(24 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda como consertar uma Picador de Madeira</p>
+					</div>
+				</div>
+
 				<!-- Informações sobre o Curso de: Empilhadeira (Tipo uma section)-->
 				<div class="content" id="empilhadeira">
 					<div class="title-content"><h2>Empilhadeira (24 Horas)</h2></div>
@@ -331,29 +420,8 @@
 						</ul>
 					</div>
 				</div>
-
-				<!-- Informações sobre o Curso de: NR11 Caminhão Grua (Tipo uma section)-->
-				<div class="content" id="caminhao-grua">
-					<div class="title-content"><h2>NR11 Caminhão Grua (24 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a operar um Caminhão Grua de forma fácil aqui</p>
-						<ul>
-							<li>Regulamentos de Operação</li>
-							<li>Requisitos Básicos</li>
-							<li>Segurança</li>
-							<li>Funcionamento</li>
-							<li>Operações</li>
-							<li>Sistema Hidráulico</li>
-							<li>Especificações</li>
-							<li>Acessórios</li>
-							<li>Cuidados</li>
-							<li>Regras</li>
-							<li>Prática de Campo</li>
-						</ul>
-					</div>
-				</div>
 			</div>
-			
+
 			<div id="solda">
 				<div class="content">
 					<div class="title-content">
