--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
 				<div class="content" id="harvester-de-esteira-op">
 					<div class="title-content"><h2>Harvester de Esteira (80 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a operar uma Harvester de Esteira de forma fácil aqui</p>
+						<p>Aprenda a operar uma Harvester de Esteira de forma fácil aqui.</p>
+						<p>Conteúdo: </p>
 						<ul>
 							<li>Mecânica, Elétrica e Hidráulica Básica</li>
 							<li>Especialização em Mecanização Florestal</li>
@@ -152,7 +153,8 @@
 				<div class="content" id="forwarder-op">
 					<div class="title-content"><h2>Forwarder (80 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a operar uma Forwarder de forma fácil aqui</p>
+						<p>Aprenda a operar uma Forwarder de forma fácil aqui.</p>
+						<p>Conteúdo: </p>
 						<ul>
 							<li>Mecânica, Elétrica e Hidráulica Básica</li>
 							<li>Especialização em Mecanização Florestal</li>
@@ -172,7 +174,8 @@
 				<div class="content" id="retroescavadeira-op">
 					<div class="title-content"><h2>Retroescavadeira (24 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a operar uma Retroescavadeira de forma fácil aqui</p>
+						<p>Aprenda a operar uma Retroescavadeira de forma fácil aqui.</p>
+						<p>Conteúdo: </p>
 						<ul>
 							<li>Segurança</li>
 							<li>Termos técnicos</li>
@@ -190,7 +193,8 @@
 				<div class="content" id="empilhadeira-op">
 					<div class="title-content"><h2>Empilhadeira (24 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a operar uma Empilhadeira de forma fácil aqui</p>
+						<p>Aprenda a operar uma Empilhadeira de forma fácil aqui.</p>
+						<p>Conteúdo: </p>
 						<ul>
 							<li>Regulamentos de Operação</li>
 							<li>Requisitos Básicos</li>
@@ -211,7 +215,8 @@
 				<div class="content" id="caminhao-grua-op">
 					<div class="title-content"><h2>NR11 Caminhão Grua (24 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a operar um Caminhão Grua de forma fácil aqui</p>
+						<p>Aprenda a operar um Caminhão Grua de forma fácil aqui.</p>
+						<p>Conteúdo: </p>
 						<ul>
 							<li>Regulamentos de Operação</li>
 							<li>Requisitos Básicos</li>
@@ -234,11 +239,12 @@
 				<div class="content" id="harvester-de-esteira-mt">
 					<div class="title-content"><h2>Harvester de Esteira (80 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a operar uma Harvester de Esteira de forma fácil aqui</p>
-
+						<p>Aprenda a consertar uma Harvester de Esteira de forma fácil aqui.</p>
+						<p>Conteúdo: </p>
 						<ul>
-							<li>A. Máquina Base</li>
-							<ul>
+							<li>Máquina Base</li>
+							<li>
+							<ul class="sublist">
 								<li>Apresentação dos Componentes</li>
 								<li>Sistema Rodante</li>
 								<li>Sistema Elétrico</li>
@@ -248,8 +254,10 @@
 								<li>Sistema de Supresssão de Incêndio</li>
 								<li>Diagnóstico de Falhas</li>
 							</ul>
-							<li>B. Cabeça Processadora</li>
-							<ul>
+							</li>
+							<li>Cabeça Processadora</li>
+							<li>
+							<ul class="sublist">
 								<li>Sistema de Alimentação</li>
 								<li>Sistema de Desgalhamento</li>
 								<li>Sistema Hidráulico</li>
@@ -261,26 +269,31 @@
 								<li>Sistema de Controle</li>
 								<li>Diagnóstico de Falhas</li>
 							</ul>
-							<li>C. Motor Diesel</li>
-							<ul>
+							</li>
+							<li>Motor Diesel</li>
+							<li>
+							<ul class="sublist">
 								<li>Sistema Mecânico</li>
 								<li>Sistema Elétrico</li>
 								<li>Sistema de Lubrificação</li>
 								<li>Sistema de Arrefecimento</li>
 								<li>Sistema de Alimentação</li>
 							</ul>
+							</li>
 						</ul>
 					</div>
 				</div>
 
+				<!-- Informações sobre o Curso de: Harvester de Pneu (Tipo uma section)-->
 				<div class="content" id="harvester-de-pneu-mt">
 					<div class="title-content"><h2>Harvester de Pneu (80 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a operar uma Harvester de Pneu de forma fácil aqui</p>
-
+						<p>Aprenda a consertar uma Harvester de Pneu.</p>
+						<p>Conteúdo: </p>
 						<ul>
-							<li>A. Máquina Base</li>
-							<ul>
+							<li>Máquina Base</li>
+							<li>
+							<ul class="sublist">
 								<li>Apresentação dos Componentes</li>
 								<li>Sistema Rodante</li>
 								<li>Sistema Elétrico</li>
@@ -290,8 +303,10 @@
 								<li>Sistema de Supresssão de Incêndio</li>
 								<li>Diagnóstico de Falhas</li>
 							</ul>
-							<li>B. Cabeça Processadora</li>
-							<ul>
+							</li>
+							<li>Cabeça Processadora</li>
+							<li>
+							<ul class="sublist">
 								<li>Sistema de Alimentação</li>
 								<li>Sistema de Desgalhamento</li>
 								<li>Sistema Hidráulico</li>
@@ -303,14 +318,17 @@
 								<li>Sistema de Controle</li>
 								<li>Diagnóstico de Falhas</li>
 							</ul>
-							<li>C. Motor Diesel</li>
-							<ul>
+							</li>
+							<li>Motor Diesel</li>
+							<li>
+							<ul class="sublist">
 								<li>Sistema Mecânico</li>
 								<li>Sistema Elétrico</li>
 								<li>Sistema de Lubrificação</li>
 								<li>Sistema de Arrefecimento</li>
 								<li>Sistema de Alimentação</li>
 							</ul>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -319,10 +337,12 @@
 				<div class="content" id="forwarder-mt">
 					<div class="title-content"><h2>Forwarder (80 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a operar uma Forwarder de forma fácil aqui</p>
+						<p>Aprenda a consertar uma Forwarder.</p>
+						<p>Conteúdo: </p>
 						<ul>
-							<li>A. Máquina Base</li>
-							<ul>
+							<li>Máquina Base</li>
+							<li>
+							<ul class="sublist">
 								<li>Apresentação dos Componentes</li>
 								<li>Sistema Rodante</li>
 								<li>Sistema Elétrico</li>
@@ -332,8 +352,10 @@
 								<li>Sistema de Supresssão de Incêndio (se equipado)</li>
 								<li>Diagnóstico de Falhas</li>
 							</ul>
-							<li>B. Cabeça Processadora</li>
-							<ul>
+							</li>
+							<li>Cabeça Processadora</li>
+							<li>
+							<ul class="sublist">
 								<li>Sistema de Alimentação</li>
 								<li>Sistema de Desgalhamento</li>
 								<li>Sistema Hidráulico</li>
@@ -345,6 +367,7 @@
 								<li>Sistema de Controle</li>
 								<li>Diagnóstico de Falhas</li>
 							</ul>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -353,11 +376,12 @@
 				<div class="content" id="retroescavadeira">
 					<div class="title-content"><h2>Retroescavadeira (24 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a operar uma Retroescavadeira de forma fácil aqui</p>
-
+						<p>Aprenda a como dar manutenção em uma retroescavadeira.</p>
+						<p>Conteúdo: </p>
 						<ul>
-							<li>A. Máquina Base</li>
-							<ul>
+							<li>Máquina Base</li>
+							<li>
+							<ul class="sublist">
 								<li>Apresentação dos Componentes</li>
 								<li>Sistema Rodante</li>
 								<li>Sistema Elétrico</li>
@@ -367,8 +391,10 @@
 								<li>Sistema de Supresssão de Incêndio</li>
 								<li>Diagnóstico de Falhas</li>
 							</ul>
-							<li>B. Cabeça Processadora</li>
-							<ul>
+							</li>
+							<li>Cabeça Processadora</li>
+							<li>
+							<ul class="sublist">
 								<li>Sistema de Alimentação</li>
 								<li>Sistema de Desgalhamento</li>
 								<li>Sistema Hidráulico</li>
@@ -380,6 +406,7 @@
 								<li>Sistema de Controle</li>
 								<li>Diagnóstico de Falhas</li>
 							</ul>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -388,35 +415,58 @@
 				<div class="content" id="picador-de-madeira-mt">
 					<div class="title-content"><h2>Picador de Madeira (24 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda como consertar uma Picador de Madeira</p>
+						<p>Aprenda como consertar uma Picador de Madeira.</p>
+						<p>Conteúdo: </p>
+						<ul>
+							<li>Sistema Elétrico</li>
+							<li>Sistema Hidráulico</li>
+							<li>Embreagem</li>
+							<li>Sistema de Estrutural</li>
+							<li>Motor Diesel</li>
+						</ul>
 					</div>
 				</div>
 		
 				<!-- Informações sobre o Curso de: Retroescavadeira (Tipo uma section)-->
-				<div class="content" id="picador-de-madeira-mt">
+				<div class="content" id="sistema-de-supressa-de-incendio-mt">
 					<div class="title-content"><h2>Sistema de Supressão de Incêndio(24 Horas)</h2></div>
 					<div class="text">
 						<p>Aprenda como consertar uma Picador de Madeira</p>
-					</div>
-				</div>
-
-				<!-- Informações sobre o Curso de: Empilhadeira (Tipo uma section)-->
-				<div class="content" id="empilhadeira">
-					<div class="title-content"><h2>Empilhadeira (24 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a operar uma Empilhadeira de forma fácil aqui</p>
+						<p>Sistemas Atendidos: </p>
 						<ul>
-							<li>Regulamentos de Operação</li>
-							<li>Requisitos Básicos</li>
-							<li>Segurança</li>
-							<li>Funcionamento</li>
-							<li>Operações</li>
-							<li>Sistema Hidráulico</li>
-							<li>Especificações</li>
-							<li>Acessórios</li>
-							<li>Cuidados</li>
-							<li>Regras</li>
-							<li>Prática de Campo</li>
+							<li>AFEX - 08 Horas</li>
+							<li>DAFO - 08 Horas</li>
+							<li>ANSUL - 08 Horas</li>
+							<li>AMEREX - 08 Horas</li>
+						</ul>
+						<p>Conteúdo: </p>
+						<ul>
+							<li>Apresentação do Sistema</li>
+							<li>Descarga Automática</li>
+							<li>Descarga Manual</li>
+							<li>Sistema Elétrico</li>
+							<li>
+							<ul class="sublist">
+								<li>Painel de Monitoramento</li>
+								<li>Sistema de Detcção</li>
+								<li>Sistema de Detonação</li>
+								<li>Diagnóstico de Falha</li>
+							</ul>
+							</li>
+							<li>Sistema de Pressurização</li>
+							<li>
+							<ul class="sublist">
+								<li>Mecanismo Disparado</li>
+								<li>Extintor</li>
+								<li>Cartuchos de Ativação</li>
+								<li>Discos de Ruptura</li>
+								<li>Iniciadores</li>
+								<li>Lacres</li>
+								<li>Peso e Conversão de Unidades</li>
+							</ul>
+							</li>
+							<li>Reparo no Sistema em caso de Disparo</li>
+							<li>Manutenção Periódica do Sistema</li>
 						</ul>
 					</div>
 				</div>
