--- a/contato.html
+++ b/contato.html
@@ -25,12 +25,12 @@
 			</div>
 			<div class="collapse-links bg-color-primary" id="collapse-links-js">
 				<ul class="navbar__list">
-					<li class="navbar__li"><a href="index.html" class="navbar__link active-link">Home</a></li>
+					<li class="navbar__li"><a href="index.html" class="navbar__link">Home</a></li>
 					<li class="navbar__li"><a href="quem-somos.html" class="navbar__link">Quem Somos</a></li>
 					<li class="navbar__li"><a href="#cursos" class="navbar__link">Cursos</a></li>
 					<li class="navbar__li"><a href="ead.html" class="navbar__link">Ead</a></li>
 					<li class="navbar__li"><a href="servicos.html" class="navbar__link">Serviços</a></li>
-					<li class="navbar__li"><a href="contato.html" class="navbar__link">Contato</a></li>
+					<li class="navbar__li"><a href="contato.html" class="navbar__link active-link">Contato</a></li>
 				</ul>	
 		</div>
 	</nav>
