--- a/ead.html
+++ b/ead.html
@@ -1,61 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles/global.css">
-    <title>EAD</title>
-
-    <link rel="stylesheet" href="styles/global.css">
-	<link rel="stylesheet" href="styles/ead.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles/navbar.css">
+	<link rel="stylesheet" href="styles/global.css">
+	<title>Document</title>
 </head>
 <body>
-	<!-- NAVBAR -->
-	<nav id="navbar" class="bg-contrast-color">
-		<div class="navbar-container">
-			<a href="index.html">
-				<img class="navbar__logo" src="images/logo-novaera.webp" alt="Logo da NovaEra">
-			</a>
-			<div class="navbar__toggle" id="navbar__toggle-js">
-				<span></span>
-				<span></span>
-				<span></span>
+		<!-- NAVBAR -->
+		<nav id="navbar" class="bg-contrast-color">
+			<div class="navbar-container">
+				<a href="index.html">
+					<img class="navbar__logo" src="images/logo-novaera.webp" alt="Logo da NovaEra">
+				</a>
+				<div class="navbar__toggle" id="navbar__toggle-js">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="collapse-links bg-color-primary" id="collapse-links-js">
+					<ul class="navbar__list">
+						<li class="navbar__li"><a href="index.html" class="navbar__link">Home</a></li>
+						<li class="navbar__li"><a href="quem-somos.html" class="navbar__link">Quem Somos</a></li>
+						<li class="navbar__li"><a href="#cursos" class="navbar__link">Cursos</a></li>
+						<li class="navbar__li"><a href="ead.html" class="navbar__link active-link">Ead</a></li>
+						<li class="navbar__li"><a href="servicos.html" class="navbar__link">Serviços</a></li>
+						<li class="navbar__li"><a href="contato.html" class="navbar__link">Contato</a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="collapse-links bg-color-primary" id="collapse-links-js">
-				<ul class="navbar__list">
-					<li class="navbar__li"><a href="index.html" class="navbar__link active-link">Home</a></li>
-					<li class="navbar__li"><a href="quem-somos.html" class="navbar__link">Quem Somos</a></li>
-					<li class="navbar__li"><a href="#cursos" class="navbar__link">Cursos</a></li>
-					<li class="navbar__li"><a href="ead.html" class="navbar__link">Ead</a></li>
-					<li class="navbar__li"><a href="servicos.html" class="navbar__link">Serviços</a></li>
-					<li class="navbar__li"><a href="contato.html" class="navbar__link">Contato</a></li>
-				</ul>	
-		</div>
-	</nav>
-
-	<main>
-		<img src="images/EAD/hero/Mapa.svg" alt="">
-		<div class="column2 flex">
-			<div class="text-container">
-				<h1>Conheça o nosso Curso EAD</h1>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate at praesentium tempore facere, beatae quam debitis? Aliquam tempore cupiditate, iste animi quaerat at exercitationem totam tenetur, recusandae, qui vel est!
-				</p>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facere perspiciatis repudiandae iusto nihil aliquid, ea officia, at laudantium, provident quod. Aperiam ipsa dolores corrupti quaerat voluptates reiciendis accusantium facilis.
-				</p>
-			</div>
-			<div class="subscribe-button">
-				<a href="">INSCREVA-SE</a>
-			</div>
-		</div>
-	</main>
-
-	<footer class="footer">
-		<p class="footer__text">&copy; <a class="footer__link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
-	</footer>
+		</nav>
+	
 </body>
 <script src="scripts/activate_toggle_button.js"></script>
 </html>
