Footer Criado e estilizado

--- a/servicos.html
+++ b/servicos.html
@@ -9,6 +9,7 @@
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="styles/global.css">
 	<link rel="stylesheet" href="styles/navbar.css">
+	<link rel="stylesheet" href="styles/footer.css">
 
 </head>
 <body>
@@ -34,6 +35,11 @@
 				</ul>	
 		</div>
 	</nav>
+	
+	<!-- FOOTER -->
+	<footer>
+		<p>Site feito por &copy;<a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
+	</footer>
 </body>
 <script src="scripts/activate_toggle_button.js"></script>
 </html>
