--- a/contato.html
+++ b/contato.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="styles/global.css">
 	<link rel="stylesheet" href="styles/navbar.css">
 	<link rel="stylesheet" href="styles/contato.css">
+	<link rel="stylesheet" href="styles/footer.css">
+	
 </head>
 <body>
 	<!-- NAVBAR -->
@@ -93,9 +95,9 @@
 		</div>
 	</main>
 
-	<!-- Rodapé -->
+	<!-- FOOTER -->
 	<footer>
-		<p>Alguma informação importante</p>
+		<p>Site feito por &copy;<a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
 	</footer>
 </body>
 <script src="scripts/activate_toggle_button.js"></script>
