--- a/ead.html
+++ b/ead.html
@@ -4,8 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<link rel="stylesheet" href="styles/navbar.css">
 	<link rel="stylesheet" href="styles/global.css">
+	<link rel="stylesheet" href="styles/footer.css">
+	
 	<title>Document</title>
 </head>
 <body>
@@ -32,7 +35,11 @@
 				</div>
 			</div>
 		</nav>
-	
+		<main></main>
+		<!-- FOOTER -->
+		<footer>
+			<p>Site feito por &copy;<a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
+		</footer>
 </body>
 <script src="scripts/activate_toggle_button.js"></script>
 </html>
