--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/home.css">
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
-	
-	<title>Página Inicial da Nova Era</title>
+	<link rel="stylesheet" href="styles/footer.css">
+	<link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
 	<!-- NAVBAR -->
@@ -40,6 +40,7 @@
 		</div>
 	</nav>
 
+	<!-- MAIN CONTENT -->
 	<main>
 		<div class="hero">
 			<section class="hero__text">
@@ -513,8 +514,9 @@
 		</div>
 	</main>
 
-	<footer class="footer">
-		<p class="footer__text">&copy; <a class="footer__link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
+	<!-- FOOTER -->
+	<footer>
+		<p>Site feito por &copy;<a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
 	</footer>
 </body>
 <script src="scripts/activate_toggle_button.js"></script>
