--- a/quem-somos.html
+++ b/quem-somos.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
 	<link rel="stylesheet" type="text/css" href="styles/quem_somos.css">
+	<link rel="stylesheet" href="styles/footer.css">
+
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -171,6 +173,12 @@
 		</div>
 
 	</main>
+
+	<!-- FOOTER -->
+	<footer>
+		<p>Site feito por &copy;<a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
+	</footer>
+	
 </body>
 <!-- My scripts -->
 <script src="scripts/activate_toggle_button.js"></script>
