Estilizando para tablet

--- a/contato.html
+++ b/contato.html
@@ -97,7 +97,7 @@
 
 	<!-- FOOTER -->
 	<footer>
-		<p>Site feito por &copy;<a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
+		<p>&copy; Site feito por <a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
 	</footer>
 </body>
 <script src="scripts/activate_toggle_button.js"></script>
