--- a/quem-somos.html
+++ b/quem-somos.html
@@ -176,7 +176,7 @@
 
 	<!-- FOOTER -->
 	<footer>
-		<p>Site feito por &copy;<a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
+		<p>&copy; Site feito por <a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
 	</footer>
 	
 </body>
