--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
 	<link rel="stylesheet" href="styles/footer.css">
-	<link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
 	<!-- NAVBAR -->
@@ -516,7 +515,7 @@
 
 	<!-- FOOTER -->
 	<footer>
-		<p>Site feito por &copy;<a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
+		<p>&copy; Site feito por <a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
 	</footer>
 </body>
 <script src="scripts/activate_toggle_button.js"></script>
