tentanto arrumar os cards

--- a/index.html
+++ b/index.html
@@ -124,6 +124,22 @@
 					</div>
 				</div>
 			</div>
+
+			<!-- NOVA ERA -->
+			<div class="card">
+				<div class="img-wrapper">
+					<img src="images/Home/Cards/lampada-logo-bl.webp" alt="">
+				</div>
+				<div class="card-text">
+					<h3 class="card-title">NOVA ERA</h3>
+					<div class="card-description">
+						<p>Nova Era: Uma empresa que se compromete em cuidar do proesente para termos um futuro melhor.</p>
+					</div>
+					<div class="link-wrapper">
+						<a href="#novaera">Clique aqui para mais detalhes</a>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<div class="detailed-courses">
