estilizando para PC

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="card">
 				<img src="images/Home/Cards/operacao-de-maquinas.jpg" alt="">
 				<div class="card-text">
-					<h3 class="card-title">Operação de Máquinas Florestais</h3>
+					<div class="card-title"><h3>Operação de Máquinas Florestais</h3></div>
 					<div class="card-description">
 						<p>Cursos desse Tópico:</p>
 						<ul class="card-list">
@@ -79,7 +79,7 @@
 			<div class="card">
 				<img src="images/Home/Cards/mecanico.webp" alt="">
 				<div class="card-text">
-					<h3 class="card-title">Manutenção de Máquinas Florestais</h3>
+					<div class="card-title"><h3>Manutenção de Máquinas Florestais</h3></div>
 					<div class="card-description">
 						<p>Cursos desse Tópico:</p>
 						<ul class="card-list">
@@ -102,7 +102,7 @@
 			<div class="card">
 				<img src="images/Home/Cards/solda.webp" alt="">
 				<div class="card-text">
-					<h3 class="card-title">Solda</h3>
+					<div class="card-title"><h3>Solda</h3></div>
 					<div class="card-description">
 						<p>Conteúdo:</p>
 						<ul class="card-list">
@@ -124,23 +124,29 @@
 			<div id="operacao-de-maquinas-florestais">
 				<!-- Informações sobre o Curso de: Harvester de Esteira (Tipo uma section)-->
 				<div class="content" id="harvester-de-esteira-op">
-					<div class="title-content"><h2>Harvester de Esteira (80 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a operar uma Harvester de Esteira de forma fácil aqui.</p>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Mecânica, Elétrica e Hidráulica Básica</li>
-							<li>Especialização em Mecanização Florestal</li>
-							<li>Máquina Base/Escavadeira PC200/ Cabeçote florestal 370E</li>
-							<li>Segurança na Operação</li>
-							<li>Procedimentos Administrativos</li>
-							<li>Procedimentos Operacionais</li>
-							<li>Tecnologias embarcadas</li>
-							<li>Sistema Hidráulica</li>
-							<li>Sistema Elétrico</li>
-							<li>Conhecimento Básico Cabeçote</li>
-						</ul>
+					<div class="title-content"><h2>Harvester de Esteira</h2></div>
+					<div class="row">
+						<div class="text">
+							<p>Aprenda a operar uma Harvester de Esteira de forma fácil aqui.</p>
+							<p>Conteúdo: </p>
+							<ul>
+								<li>Mecânica, Elétrica e Hidráulica Básica</li>
+								<li>Especialização em Mecanização Florestal</li>
+								<li>Máquina Base/Escavadeira PC200/ Cabeçote florestal 370E</li>
+								<li>Segurança na Operação</li>
+								<li>Procedimentos Administrativos</li>
+								<li>Procedimentos Operacionais</li>
+								<li>Tecnologias embarcadas</li>
+								<li>Sistema Hidráulica</li>
+								<li>Sistema Elétrico</li>
+								<li>Conhecimento Básico Cabeçote</li>
+							</ul>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/harvester-G.jpg" alt="">
+						</div>	
 					</div>
+					<aside class="add-info">Duração do Curso: 80 horas</aside>
 				</div>
 
 				<!-- Informações sobre o Curso de: Forwarder (Tipo uma section)-->
