--- a/index.html
+++ b/index.html
@@ -123,27 +123,29 @@
 		<div class="detailed-courses">
 			<div id="operacao-de-maquinas-florestais">
 				<!-- Informações sobre o Curso de: Harvester de Esteira (Tipo uma section)-->
-				<div class="content" id="harvester-de-esteira-op">
+				<div class="content" id="harvester-esteira-op">
 					<div class="title-content"><h2>Harvester de Esteira</h2></div>
 					<div class="row">
-						<div class="text">
-							<p>Aprenda a operar uma Harvester de Esteira de forma fácil aqui.</p>
-							<p>Conteúdo: </p>
-							<ul>
-								<li>Mecânica, Elétrica e Hidráulica Básica</li>
-								<li>Especialização em Mecanização Florestal</li>
-								<li>Máquina Base/Escavadeira PC200/ Cabeçote florestal 370E</li>
-								<li>Segurança na Operação</li>
-								<li>Procedimentos Administrativos</li>
-								<li>Procedimentos Operacionais</li>
-								<li>Tecnologias embarcadas</li>
-								<li>Sistema Hidráulica</li>
-								<li>Sistema Elétrico</li>
-								<li>Conhecimento Básico Cabeçote</li>
-							</ul>
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda a operar uma Harvester de Esteira de forma fácil aqui.</p>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Mecânica, Elétrica e Hidráulica Básica</li>
+									<li>Especialização em Mecanização Florestal</li>
+									<li>Máquina Base/Escavadeira PC200/ Cabeçote florestal 370E</li>
+									<li>Segurança na Operação</li>
+									<li>Procedimentos Administrativos</li>
+									<li>Procedimentos Operacionais</li>
+									<li>Tecnologias embarcadas</li>
+									<li>Sistema Hidráulica</li>
+									<li>Sistema Elétrico</li>
+									<li>Conhecimento Básico Cabeçote</li>
+								</ul>
+							</div>
 						</div>
 						<div class="img-wrapper-course">
-							<img src="images/Home/Fotos-Detalhadas/harvester-G.jpg" alt="">
+							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
 						</div>	
 					</div>
 					<aside class="add-info">Duração do Curso: 80 horas</aside>
@@ -151,86 +153,118 @@
 
 				<!-- Informações sobre o Curso de: Forwarder (Tipo uma section)-->
 				<div class="content" id="forwarder-op">
-					<div class="title-content"><h2>Forwarder (80 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a operar uma Forwarder de forma fácil aqui.</p>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Mecânica, Elétrica e Hidráulica Básica</li>
-							<li>Especialização em Mecanização Florestal</li>
-							<li>Máquina Base/Escavadeira PC200/ Cabeçote florestal 370E</li>
-							<li>Segurança na Operação</li>
-							<li>Procedimentos Administrativos</li>
-							<li>Procedimentos Operacionais</li>
-							<li>Tecnologias embarcadas</li>
-							<li>Sistema Hidráulica</li>
-							<li>Sistema Elétrico</li>
-							<li>Conhecimento Básico Cabeçote</li>
-						</ul>
+					<div class="title-content"><h2>Forwarder</h2></div>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda a operar uma Forwarder de forma fácil aqui.</p>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Mecânica, Elétrica e Hidráulica Básica</li>
+									<li>Especialização em Mecanização Florestal</li>
+									<li>Máquina Base/Escavadeira PC200/ Cabeçote florestal 370E</li>
+									<li>Segurança na Operação</li>
+									<li>Procedimentos Administrativos</li>
+									<li>Procedimentos Operacionais</li>
+									<li>Tecnologias embarcadas</li>
+									<li>Sistema Hidráulica</li>
+									<li>Sistema Elétrico</li>
+									<li>Conhecimento Básico Cabeçote</li>
+								</ul>
+							</div>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/pc/forwarder/op-forwarder.png" alt="">
+						</div>	
 					</div>
+					<aside class="add-info">Duração do Curso: 80 horas</aside>
 				</div>
 			
 				<!-- Informações sobre o Curso de: Retroescavadeira (Tipo uma section)-->
 				<div class="content" id="retroescavadeira-op">
-					<div class="title-content"><h2>Retroescavadeira (24 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a operar uma Retroescavadeira de forma fácil aqui.</p>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Segurança</li>
-							<li>Termos técnicos</li>
-							<li>Adesivos</li>
-							<li>Instalação/Montagem</li>
-							<li>Instruções de Operação</li>
-							<li>Aplicações especiais</li>
-							<li>Transporte e Armazenagem</li>
-							<li>Hidráulica Básica</li>
-						</ul>
+					<div class="title-content"><h2>Retroescavadeira</h2></div>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda a operar uma Retroescavadeira de forma fácil aqui.</p>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Segurança</li>
+									<li>Termos técnicos</li>
+									<li>Adesivos</li>
+									<li>Instalação/Montagem</li>
+									<li>Instruções de Operação</li>
+									<li>Aplicações especiais</li>
+									<li>Transporte e Armazenagem</li>
+									<li>Hidráulica Básica</li>
+								</ul>
+							</div>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/op-harvester-esteira.png" alt="">
+						</div>	
 					</div>
+					<aside class="add-info">Duração do Curso: 24 horas</aside>
 				</div>
 		
 				<!-- Informações sobre o Curso de: Empilhadeira (Tipo uma section)-->
 				<div class="content" id="empilhadeira-op">
-					<div class="title-content"><h2>Empilhadeira (24 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a operar uma Empilhadeira de forma fácil aqui.</p>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Regulamentos de Operação</li>
-							<li>Requisitos Básicos</li>
-							<li>Segurança</li>
-							<li>Funcionamento</li>
-							<li>Operações</li>
-							<li>Sistema Hidráulico</li>
-							<li>Especificações</li>
-							<li>Acessórios</li>
-							<li>Cuidados</li>
-							<li>Regras</li>
-							<li>Prática de Campo</li>
-						</ul>
+					<div class="title-content"><h2>Empilhadeira</h2></div>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda a operar uma Retroescavadeira de forma fácil aqui.</p>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Regulamentos de Operação</li>
+									<li>Requisitos Básicos</li>
+									<li>Segurança</li>
+									<li>Funcionamento</li>
+									<li>Operações</li>
+									<li>Sistema Hidráulico</li>
+									<li>Especificações</li>
+									<li>Acessórios</li>
+									<li>Cuidados</li>
+									<li>Regras</li>
+									<li>Prática de Campo</li>
+								</ul>
+							</div>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/op-harvester-esteira.png" alt="">
+						</div>	
 					</div>
+					<aside class="add-info">Duração do Curso: 24 horas</aside>
 				</div>
 
 				<!-- Informações sobre o Curso de: NR11 Caminhão Grua (Tipo uma section)-->
 				<div class="content" id="caminhao-grua-op">
-					<div class="title-content"><h2>NR11 Caminhão Grua (24 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a operar um Caminhão Grua de forma fácil aqui.</p>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Regulamentos de Operação</li>
-							<li>Requisitos Básicos</li>
-							<li>Segurança</li>
-							<li>Funcionamento</li>
-							<li>Operações</li>
-							<li>Sistema Hidráulico</li>
-							<li>Especificações</li>
-							<li>Acessórios</li>
-							<li>Cuidados</li>
-							<li>Regras</li>
-							<li>Prática de Campo</li>
-						</ul>
+					<div class="title-content"><h2>NR11 Caminhão Grua</h2></div>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda a operar um Caminhão Grua de forma fácil aqui.</p>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Regulamentos de Operação</li>
+									<li>Requisitos Básicos</li>
+									<li>Segurança</li>
+									<li>Funcionamento</li>
+									<li>Operações</li>
+									<li>Sistema Hidráulico</li>
+									<li>Especificações</li>
+									<li>Acessórios</li>
+									<li>Cuidados</li>
+									<li>Regras</li>
+									<li>Prática de Campo</li>
+								</ul>
+							</div>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/op-harvester-esteira.png" alt="">
+						</div>	
 					</div>
+					<aside class="add-info">Duração do Curso: 24 horas</aside>
 				</div>
 			</div>
 			
